@@ -185,3 +185,6 @@ shady-skin Revision History
 
 2015-08-01:
 - Added discusage in menutimers and menurecordings (optional)
+
+2015-08-01:
+- Added progressmodeonly in displayreplay
